--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "request": "^2.81.0",
     "serve-favicon": "~2.4.2",
     "swagger-ui": "^3.10.0",
+    "twilio": "^3.18.0",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
